[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/enemy_unit.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Boss_mini.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.94613

[sub_resource type="CircleShape2D" id=2]
radius = 218.414

[sub_resource type="CircleShape2D" id=3]
radius = 7.90681

[sub_resource type="Animation" id=4]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_unit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Summon"
tracks/0/type = "value"
tracks/0/path = NodePath("enemy_unit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Boss_mini" type="KinematicBody2D" groups=[
"Boss",
"Mini",
]]
script = ExtResource( 2 )

[node name="enemy_unit" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.0883865 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="Area2D"]
rotation = -1.5708
scale = Vector2( 0.5, 3.75 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 10, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="Summon_timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/Summon = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Summon_timer" to="." method="_on_Summon_timer_timeout"]
